# python-poetry

./: Dockerfile  README.md  build-and-run.sh  docker-compose.yml  python-poetry.code-workspace
.github/workflows/: dockerhub-description.yml  master.yml
example/: main.py  pyproject.toml
example_project/: main.py
gha/: build-container.sh
scripts/: run.sh
